...
            .onChange(of: text, {
                viewModel.filterCats(by: text)
            })
            .refreshable {
                await viewModel.reloadCats()
            }
            .navigationTitle("The cat pokedex")
            .navigationDestination(for: CatData.self, destination: { cat in
                CatDetailsView(viewModel: CatDetailsViewModel(cat: cat))
                    .ignoresSafeArea(.container, edges: .top)
            })
            .scrollContentBackground(.hidden)
            .background(
...
