...
                            .clipShape(RoundedRectangle(cornerRadius: 8))
                    }
                }

                if let wikipediaUrl = breed.wikipediaUrl, let url = URL(string: wikipediaUrl) {
                    NavigationLink(value: url) {
                        Image("wikipedia")
                            .resizable()
                            .frame(width: 50, height: 50)
                            .background(
                                RoundedRectangle(cornerRadius: 8)
                                    .fill(.white)
                            )
...
