...
                    ContentUnavailableView {
                        Label("No cats liked yet", systemImage: "heart.slash")
                    } description: {
                        Text("Go to details and hit that heart icon!")
                            .fontWeight(.semibold)
                    }
                    .accessibilityIdentifier("emptyFavoritesCats")
                } else {
                    List {
                        ForEach(viewModel.cats) { cat in
                            NavigationLink(value: cat) {
                                ListCatCellView<FavoritesCatViewModel>(viewModel: viewModel, cat: cat)
                            }
...
